Java 1.5 added this .valueOf for numeric classes.  Let's use it...